--- a/package.json
+++ b/package.json
@@ -1,47 +1,43 @@
 {
-  "name": "@samchon/backend",
+  "name": "fake-iamport-server",
   "version": "0.0.0",
-  "description": "Backend for ${PROJECT}",
+  "description": "Fake iamport server for testing",
+  "main": "lib/index.js",
+  "typings": "lib/index.d.ts",
   "scripts": {
-    "build": "rimraf bin && ttsc",
-    "build:api": "rimraf packages/api/lib && nestia sdk && tsc -p tsconfig.api.json",
-    "build:models": "rimraf packages/models/lib && tsc -p tsconfig.models.json",
+    "build": "rimraf lib && ttsc",
+    "build:api": "rimraf packages/api/lib && nestia sdk && npx copyfiles README.md packages/api && tsc -p tsconfig.api.json",
     "dev": "npm run build -- --watch",
     "package:api": "npm run build:api && cd packages/api && npm publish",
-    "package:models": "npm run build:models && cd packags/models && npm publish",
-    "reset:dev": "git pull && npm install && npm run build && npm run stop && npm run test -- --mode=dev && npm run start:updator:master && npm run start dev",
-    "start": "pm2 start bin/executable/server.js -i 0 --name ${PROJECT}-backend-server --wait-ready --listen-timeout 120000 --kill-timeout 15000 --",
-    "start:local": "pm2 start bin/executable/server.js -i 2 --name ${PROJECT}-backend-server --wait-ready --listen-timeout 120000 --kill-timeout 15000 -- local",
-    "start:updator:master": "pm2 start --name bbs-backend-updator-master bin/updator/master.js",
-    "start:updator:slave": "pm2 start --name bbs-backend-updator-slave bin/updator/slave.js",
-    "start:reload": "pm2 reload ${PROJECT}-backend-server",
-    "stop": "pm2 delete ${PROJECT}-backend-server",
-    "stop:updator:master": "pm2 delete bbs-backend-updator-master",
-    "stop:updator:slave": "pm2 delete bbs-backend-updator-slave",
-    "update": "node bin/executable/update",
-    "test": "node bin/test",
-    "test:update": "node bin/test/manual/update",
+    "start": "pm2 start lib/executable/server.js -i 1 --name fake-iamport-server --wait-ready --listen-timeout 120000 --kill-timeout 15000 --",
+    "start:reload": "pm2 reload fake-iamport-server",
+    "stop": "pm2 delete fake-iamport-server",
+    "test": "node lib/test",
     "tslint": "tslint -p tsconfig.json"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/samchon/backend"
+    "url": "https://github.com/samchon/fake-iamport-server"
   },
-  "author": "${AUTHOR}",
+  "author": "Jeongho Nam",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/samchon/backend/issues"
+    "url": "https://github.com/samchon/fake-iamport-server/issues"
   },
-  "homepage": "https://github.com/samchon/backend",
+  "homepage": "https://github.com/samchon/fake-iamport-server",
   "devDependencies": {
+    "@types/atob": "^2.1.2",
+    "@types/btoa": "^1.2.3",
     "@types/cli": "^0.11.19",
     "@types/express": "^4.17.12",
     "@types/node": "^15.6.1",
     "@types/uuid": "^8.3.0",
     "cli": "^1.0.1",
+    "copyfiles": "^2.4.1",
     "nestia": "^0.4.0",
     "pm2": "^4.5.6",
     "rimraf": "^3.0.2",
+    "serialize-error": "^9.0.0",
     "sloc": "^0.2.1",
     "ts-node": "^10.4.0",
     "tslint": "^6.1.3",
@@ -50,14 +46,20 @@
     "typescript-is": "^0.18.2"
   },
   "dependencies": {
+    "atob": "^2.1.2",
+    "btoa": "^1.2.1",
     "encrypted-nestjs": "^0.1.7",
-    "git-last-commit": "^1.0.0",
-    "mutex-server": "^0.3.0",
-    "mysql": "^2.18.1",
     "node-fetch": "^2.6.1",
-    "safe-typeorm": "^0.2.6",
     "source-map-support": "^0.5.19",
-    "tstl": "^2.5.0"
+    "tstl": "^2.5.0",
+    "uuid": "^8.3.2"
   },
-  "private": true
+  "keywords": [
+    "toss",
+    "payments",
+    "server",
+    "fake",
+    "test",
+    "mock"
+  ]
 }
