--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "@samchon/${PROJECT}-api",
+  "name": "@samchon/fake-iamport-server-api",
   "version": "0.0.0",
-  "description": "API for ${PROJECT}",
+  "description": "API for fake-iamport-server",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "repository": {
     "type": "git",
-    "url": "https://github.com/samchon/backend"
+    "url": "https://github.com/samchon/fake-iamport-server"
   },
   "author": "${AUTHOR}",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/samchon/backend/issues"
+    "url": "https://github.com/samchon/fake-iamport-server/issues"
   },
-  "homepage": "https://github.com/samchon/backend#readme",
+  "homepage": "https://github.com/samchon/fake-iamport-server#readme",
   "dependencies": {
     "node-fetch": "^2.6.1"
   }
