--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fake-iamport-server",
-  "version": "1.0.3",
+  "version": "1.0.4-dev.20220619",
   "description": "Fake iamport server for testing",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -48,12 +48,11 @@
     "typescript": "^4.6.4"
   },
   "dependencies": {
-    "nestia-helper": "^2.1.1",
+    "nestia-helper": "^2.2.1-dev.20220619",
     "node-fetch": "^2.6.1",
     "source-map-support": "^0.5.19",
-    "tstl": "^2.5.3",
-    "typescript-is": "^0.19.0",
-    "typescript-json": "^2.1.0",
+    "tstl": "^2.5.6",
+    "typescript-json": "^3.0.1-dev.20220619",
     "uuid": "^8.3.2"
   },
   "keywords": [
