--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fake-iamport-server",
-  "version": "1.0.4-dev.20220619",
+  "version": "1.0.4",
   "description": "Fake iamport server for testing",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -37,7 +37,7 @@
     "@typescript-eslint/parser": "^5.26.0",
     "cli": "^1.0.1",
     "copyfiles": "^2.4.1",
-    "nestia": "^2.1.12",
+    "nestia": "^3.0.2",
     "pm2": "^4.5.6",
     "prettier": "^2.6.2",
     "rimraf": "^3.0.2",
@@ -48,11 +48,11 @@
     "typescript": "^4.6.4"
   },
   "dependencies": {
-    "nestia-helper": "^2.2.1-dev.20220619",
+    "nestia-helper": "^3.0.2",
     "node-fetch": "^2.6.1",
     "source-map-support": "^0.5.19",
     "tstl": "^2.5.6",
-    "typescript-json": "^3.0.1-dev.20220619",
+    "typescript-json": "^3.0.5",
     "uuid": "^8.3.2"
   },
   "keywords": [
