--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fake-iamport-server",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "Fake iamport server for testing",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -37,7 +37,7 @@
     "@typescript-eslint/parser": "^5.26.0",
     "cli": "^1.0.1",
     "copyfiles": "^2.4.1",
-    "nestia": "^3.0.4",
+    "nestia": "^3.0.7",
     "pm2": "^4.5.6",
     "prettier": "^2.6.2",
     "rimraf": "^3.0.2",
@@ -45,14 +45,14 @@
     "ts-node": "^10.8.0",
     "tslint": "^6.1.3",
     "ttypescript": "^1.5.12",
-    "typescript": "4.6.x"
+    "typescript": "^4.7.2"
   },
   "dependencies": {
-    "nestia-helper": "^3.0.4",
+    "nestia-helper": "^3.0.5",
     "node-fetch": "^2.6.1",
     "source-map-support": "^0.5.19",
     "tstl": "^2.5.6",
-    "typescript-json": "^3.0.6",
+    "typescript-json": "^3.0.10",
     "uuid": "^8.3.2"
   },
   "keywords": [
